--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -164,10 +164,14 @@ dl.icon dt, dl.icon dd {
 
 dl a.icon-link {						/* topic row icon links */
 	display: block;
-	float: left;
-	width: 29px;
-	height: 27px;
-	margin: 4px 0 4px 9px;
+	width: 30px;
+	height: 30px;
+	padding: 0;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	margin-top: -15px;
+	margin-left: 9px;
 }
 
 dd.posts, dd.topics, dd.views, dd.extra, dd.mark {
